# learning-speaking-app

./: .clauderules  .coderabbit.yaml  .cursorrules  .env.example  .gitignore  CHANGELOG.md  CONTINUATION_REGISTRY.md  CONTRIBUTING.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  postcss.config.mjs  redocly.yaml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml
.husky/: pre-commit  pre-push
docs/: DEPLOYMENT.md  DEVELOPMENT_JOURNAL.md  README.md  SECURITY.md  TESTING.md
docs/api/: openapi.yaml
docs/architecture/: SYSTEM_DIAGRAM.md  SYSTEM_SPEC.md
docs/build-packet-reports/: PACKET-01-scaffold-report.md  PACKET-02-database-report.md  PACKET-03a-auth-report.md  (+10 more)
e2e/: auth-error.spec.ts  dashboard.spec.ts  drill.spec.ts  global-setup.ts  history.spec.ts  landing.spec.ts  launch.spec.ts  session.spec.ts
praat-service/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
praat-service/app/: __init__.py  auth.py  config.py  main.py  models.py
praat-service/app/routes/: __init__.py  extract.py
praat-service/app/services/: __init__.py  audio.py  contour.py
praat-service/tests/: test_health.py
prisma/: schema.prisma  seed.ts
scripts/: backfill-improved-transcripts.ts  backfill-new-metrics.ts  backfill-transcripts.ts  extract-lexicon.ts  generate-qr-codes.ts  seed-lexicon.ts  verify-env.ts
src/: instrumentation.ts  middleware.test.ts  middleware.ts
(+984 files in other folders)
